<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <POU Name="RFID_Sensor_Read_Tag" Id="{51125625-6b5b-4364-8ea8-0c97b84cda72}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION RFID_Sensor_Read_Tag : RFID_Sensor_Errors;
VAR_INPUT
	Sensor :  REFERENCE TO RFID_Sensor;
END_VAR

VAR
	m_Tag : Tag_ID;
	i : UINT;
END_VAR

VAR_IN_OUT
	Tag : Tag_ID;
END_VAR

VAR CONSTANT 
	TagSize : UINT := 8;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF Sensor.IN_Not_Connected_To_Read_Write_Head THEN
	RFID_Sensor_Read_Tag := RFID_Sensor_Errors.Not_Connected;
ELSIF Sensor.IN_Antenna_Detuned_AT_HF_Read_Write_Head THEN
	RFID_Sensor_Read_Tag := RFID_Sensor_Errors.Antenna_Detuned;
ELSE
	FOR i:=0 TO 7 BY 1 DO
		m_Tag[i] := Sensor.RD[i];
	END_FOR
	
	Tag := m_Tag;
	RFID_Sensor_Read_Tag := RFID_Sensor_Errors.None;
END_IF]]></ST>
    </Implementation>
    <LineIds Name="RFID_Sensor_Read_Tag">
      <LineId Id="41" Count="1" />
      <LineId Id="44" Count="1" />
      <LineId Id="39" Count="0" />
      <LineId Id="7" Count="0" />
      <LineId Id="17" Count="1" />
      <LineId Id="49" Count="2" />
      <LineId Id="47" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>